fix: prevent aplayer behind live2d

--- a/source/css/_partial/live2d.styl
+++ b/source/css/_partial/live2d.styl
@@ -9,3 +9,6 @@ if hexo-config("live2d.position") == "right"
 
 #live2d-toggle
   z-index: 1
+
+#live2d-plugin
+  z-index: 98 !important
